monster-commit - api in Laravel nachbauen, erster Teil...

--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: App
-        psr4_prefix: App
+        namespace: Oplan
+        psr4_prefix: Oplan
         src_path: app
